--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,10 +4,48 @@
 @import "modules/hello.scss";
 
 body {
-  background: $wtf;
+  background-image: url(../assets/img/048a47235106b763bc494829f521c2a9.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+}
+
+
+#yourText {
+  display: block;
+  min-width: 500px;
+  height: 300px;
+  background-image: url(../assets/img/tło.jpg);
+  color: #fff;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.button-load {
+  background-image: url(../assets/img/tło.jpg);
+  color: #fff;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin-left: 10px;
+
+}
+
+.button-save {
+  background-image: url(../assets/img/048a47235106b763bc494829f521c2a9.jpg);
+  color: #fff;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin-left: 10px;
+
 }
